Add `get_frames_timestamps` function

--- a/nth_frame.ipynb
+++ b/nth_frame.ipynb
@@ -6,7 +6,7 @@
       "name": "nth_frame.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNRHtf7FYQpfEhUIe9qHbax",
+      "authorship_tag": "ABX9TyNsvVnISdV4vliym1F7nMDw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,17 +114,7 @@
         "\n",
         "> The selection criteria was \n",
         "> \n",
-        "> $  50m \\le total \\ displacement \\ along \\ the \\ trajectory \\le 2500m$\n",
-        ">\n",
-        "\n",
-        "> ### Division\n",
-        "* Assuming we managed to divide the trajectories into $50m$ sub-trajectories.\n",
-        "* We have the speed at each point, and we can assume constant speed between adjacent points of the average speed at these point $v_{n → n+1} = {{v_{n} + v_{n+1} \\over 2}, \\ n \\in \\{1, \\ 2, \\ 3, \\ \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\}}$.\n",
-        "* The time between adjacent points is $1s$.\n",
-        "* To get the time of corresponding frame for the $nth$ point we can use this formula $t_n={d \\times n \\over v_{n → n+1}} , \\ n \\in \\{1, \\  2, \\  3, \\  \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\}$.\n",
-        "* Then pass the list of $t_n$s to `ffmpeg` to extract the frames. \n",
-        "\n",
-        "> https://colab.research.google.com/drive/1RVCX9pociA3bU9IEeJNz0xaboCKWqYoq#scrollTo=zsx25ZJ-8PTK&line=9&uniqifier=1"
+        "> $  50m \\le total \\ displacement \\ along \\ the \\ trajectory \\le 2500m$"
       ],
       "metadata": {
         "id": "Mv4lpIAPlBMa"
@@ -164,11 +154,12 @@
         "  \"Return list of GPS points from a trajectory\"\n",
         "  return [(point[\"latitude\"], point[\"longitude\"]) for point in trajectory[1]]\n",
         "\n",
-        "def get_trajectory_running_distance(points: List[Tuple[float, float]]) -> List[float]:\n",
+        "def get_trajectory_running_distance(trajectory: Tuple[str, List]) -> List[float]:\n",
         "  \"\"\"\n",
         "  Get the running distance of the trajectory at each second of the video\n",
         "  :param: points - list of GPS points, [](latitude, longitude)\n",
         "  \"\"\"\n",
+        "  points = trajectory_to_points(trajectory)\n",
         "  # prepadding a zero at the beginning because the running distance at the start is zero.\n",
         "  adjacent_distance = [0] + [geopy.distance.vincenty(p1, p2).meters for p1, p2 in zip(points, points[1:])]\n",
         "  running_distance = accumulate(adjacent_distance)\n",
@@ -208,7 +199,7 @@
       "metadata": {
         "id": "s1v6VrxZrKXE"
       },
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -218,7 +209,7 @@
         "\n",
         "sample_trajectory = selected_trajectories[0]\n",
         "\n",
-        "trajectory_running_distance = get_trajectory_running_distance(trajectory_to_points(sample_trajectory))\n",
+        "trajectory_running_distance = get_trajectory_running_distance(sample_trajectory)\n",
         "total_distance_using_running_distance = trajectory_running_distance[-1]\n",
         "total_distance_pre_computed = get_trajectory_total_distance(sample_trajectory[0])\n",
         "\n",
@@ -227,13 +218,22 @@
       "metadata": {
         "id": "6mtliwdL8eK9"
       },
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "So we can concloude the running average calculations are right! Now let's calcualte figure out how to get the time of the frame."
+        "So we can concloude the running average calculations are right! Now let's figure out how to get the time of the frame.\n",
+        "\n",
+        "> ### Division\n",
+        "* Assuming we managed to divide the trajectories into $50m$ sub-trajectories.\n",
+        "* We have the speed at each point, and we can assume constant speed between adjacent points of the average speed at these point $v_{n → n+1} = {{v_{n} + v_{n+1} \\over 2}, \\ n \\in \\{1, \\ 2, \\ 3, \\ \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\}}$.\n",
+        "* The time between adjacent points is $1s$.\n",
+        "* To get the time of corresponding frame for the $nth$ point we can use this formula $t_n={d \\times n \\over v_{n → n+1}} , \\ n \\in \\{1, \\  2, \\  3, \\  \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\}$.\n",
+        "* Then pass the list of $t_n$s to `ffmpeg` to extract the frames. \n",
+        "\n",
+        "> https://colab.research.google.com/drive/1RVCX9pociA3bU9IEeJNz0xaboCKWqYoq#scrollTo=zsx25ZJ-8PTK&line=9&uniqifier=1"
       ],
       "metadata": {
         "id": "hiTqMZ5DIMgF"
@@ -242,66 +242,110 @@
     {
       "cell_type": "code",
       "source": [
-        "get_average_speeds(sample_trajectory)"
+        "import numpy as np\n",
+        "from numba import njit\n",
+        "\n",
+        "\n",
+        "SAMPLING_DISTANCE = 10\n",
+        "\n",
+        "\n",
+        "@njit\n",
+        "def get_frames_timestamps(running_distance, average_speeds, sampling_points):\n",
+        "  frames_times = []\n",
+        "  for sampling_distance in sampling_points:\n",
+        "    for idx, d in enumerate(running_distance):\n",
+        "      if d >= sampling_distance:\n",
+        "        # If the running distance greater than current sampling point then\n",
+        "        # the frame is between the currrent point and the previous point.\n",
+        "        distance_at_the_previos_point = running_distance[idx - 1]\n",
+        "        speed_at_the_previos_point    = average_speeds[idx - 1]\n",
+        "        # the time equals the time at the previous point + the time to reach the sampling_distance\n",
+        "        # we can use the idx of the previous point as the time at the prious point; the time between adjacent points is 1s\n",
+        "        time = (idx - 1) + ((sampling_distance - distance_at_the_previos_point) / speed_at_the_previos_point)\n",
+        "        time_ms = int(time * 1000)\n",
+        "        frames_times.append(time_ms)\n",
+        "        break\n",
+        "    else:\n",
+        "        raise ValueError(\"Unreachable\")\n",
+        "  \n",
+        "  return frames_times\n",
+        "\n",
+        "trajectory_running_distance = np.asarray(get_trajectory_running_distance(sample_trajectory))\n",
+        "trajectory_total_distance = int(get_trajectory_running_distance(sample_trajectory)[-1])\n",
+        "trajectory_sampling_points = np.asarray(range(0, trajectory_total_distance, SAMPLING_DISTANCE)[1:])\n",
+        "trajectory_average_speeds = np.asarray(get_average_speeds(sample_trajectory))"
+      ],
+      "metadata": {
+        "id": "lUH8Lw9qJXRL"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_frames_timestamps(trajectory_running_distance, trajectory_average_speeds, trajectory_sampling_points)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "lUH8Lw9qJXRL",
-        "outputId": "75083e4e-187f-4880-d283-2411543385f5"
+        "id": "J7M5MYvkanC8",
+        "outputId": "8adfffce-86b1-4415-e7ce-1ec58ddb4464"
       },
-      "execution_count": 6,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[6.97,\n",
-              " 8.97,\n",
-              " 10.7,\n",
-              " 11.93,\n",
-              " 12.38,\n",
-              " 12.28,\n",
-              " 12.08,\n",
-              " 11.62,\n",
-              " 11.0,\n",
-              " 10.5,\n",
-              " 10.02,\n",
-              " 8.99,\n",
-              " 7.82,\n",
-              " 7.33,\n",
-              " 7.12,\n",
-              " 6.93,\n",
-              " 6.7,\n",
-              " 6.15,\n",
-              " 5.02,\n",
-              " 3.28,\n",
-              " 1.14,\n",
-              " 0.81,\n",
-              " 2.1,\n",
-              " 2.62,\n",
-              " 2.64,\n",
-              " 2.73,\n",
-              " 2.3,\n",
-              " 2.22,\n",
-              " 3.72,\n",
-              " 5.22,\n",
-              " 6.81,\n",
-              " 8.47,\n",
-              " 9.57,\n",
-              " 10.63,\n",
-              " 11.18,\n",
-              " 11.47,\n",
-              " 12.0,\n",
-              " 12.61,\n",
-              " 12.86]"
+              "[1146,\n",
+              " 2199,\n",
+              " 3114,\n",
+              " 3953,\n",
+              " 4731,\n",
+              " 5717,\n",
+              " 6628,\n",
+              " 7514,\n",
+              " 8445,\n",
+              " 9416,\n",
+              " 10395,\n",
+              " 11449,\n",
+              " 12823,\n",
+              " 14205,\n",
+              " 15575,\n",
+              " 17143,\n",
+              " 18916,\n",
+              " 24121,\n",
+              " 28031,\n",
+              " 28561,\n",
+              " 30427,\n",
+              " 31631,\n",
+              " 32612,\n",
+              " 33532,\n",
+              " 34262,\n",
+              " 35149,\n",
+              " 36021,\n",
+              " 36807,\n",
+              " 37594,\n",
+              " 38314]"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 75
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "J6_nYI3Gnn08"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
