Add `trajectory_with_timestamps` function

--- a/nth_frame.ipynb
+++ b/nth_frame.ipynb
@@ -6,7 +6,7 @@
       "name": "nth_frame.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNsvVnISdV4vliym1F7nMDw",
+      "authorship_tag": "ABX9TyNV0tHJ98lDBwlxdKjZYBsH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,37 +39,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zh53-WAtk1Vu",
-        "outputId": "2ce592a1-d5b5-4608-9de9-7fd9167ab3f0"
+        "id": "zh53-WAtk1Vu"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: pandas==1.3.5 in /usr/local/lib/python3.7/dist-packages (1.3.5)\n",
-            "Requirement already satisfied: requests==2.23.0 in /usr/local/lib/python3.7/dist-packages (2.23.0)\n",
-            "Requirement already satisfied: geopy==1.17.0 in /usr/local/lib/python3.7/dist-packages (1.17.0)\n",
-            "Requirement already satisfied: imageio==2.4.1 in /usr/local/lib/python3.7/dist-packages (2.4.1)\n",
-            "Requirement already satisfied: Pillow==7.1.2 in /usr/local/lib/python3.7/dist-packages (7.1.2)\n",
-            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (1.21.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2018.9)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0) (2021.10.8)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0) (2.10)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0) (1.24.3)\n",
-            "Requirement already satisfied: geographiclib<2,>=1.49 in /usr/local/lib/python3.7/dist-packages (from geopy==1.17.0) (1.52)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas==1.3.5) (1.15.0)\n",
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Reproducible-ish dependencies\n",
         "!pip install \\\n",
@@ -94,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R5a0szxE4jR9",
-        "outputId": "384f2bd5-97c9-48ba-d212-1e01b3c0be34"
+        "outputId": "2f90d83d-cc79-4994-ec21-1cd007d83221"
       },
       "execution_count": 2,
       "outputs": [
@@ -146,9 +120,12 @@
         "import PIL\n",
         "import imageio\n",
         "import requests\n",
+        "from numba import njit, typed, types\n",
+        "\n",
         "\n",
         "\n",
         "ROUNDING_NDIGITS = 2\n",
+        "\n",
         "\n",
         "def trajectory_to_points(trajectory: Tuple[str, List]) -> List[Tuple[float, float]]:\n",
         "  \"Return list of GPS points from a trajectory\"\n",
@@ -161,7 +138,7 @@
         "  \"\"\"\n",
         "  points = trajectory_to_points(trajectory)\n",
         "  # prepadding a zero at the beginning because the running distance at the start is zero.\n",
-        "  adjacent_distance = [0] + [geopy.distance.vincenty(p1, p2).meters for p1, p2 in zip(points, points[1:])]\n",
+        "  adjacent_distance = [0] + [geopy.distance.distance(p1, p2).meters for p1, p2 in zip(points, points[1:])]\n",
         "  running_distance = accumulate(adjacent_distance)\n",
         "  return [round(d, ROUNDING_NDIGITS) for d in running_distance]\n",
         "\n",
@@ -199,7 +176,7 @@
       "metadata": {
         "id": "s1v6VrxZrKXE"
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -218,7 +195,7 @@
       "metadata": {
         "id": "6mtliwdL8eK9"
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -243,15 +220,13 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "from numba import njit\n",
-        "\n",
         "\n",
         "SAMPLING_DISTANCE = 10\n",
         "\n",
         "\n",
         "@njit\n",
         "def get_frames_timestamps(running_distance, average_speeds, sampling_points):\n",
-        "  frames_times = []\n",
+        "  frames_times = [0]\n",
         "  for sampling_distance in sampling_points:\n",
         "    for idx, d in enumerate(running_distance):\n",
         "      if d >= sampling_distance:\n",
@@ -259,31 +234,35 @@
         "        # the frame is between the currrent point and the previous point.\n",
         "        distance_at_the_previos_point = running_distance[idx - 1]\n",
         "        speed_at_the_previos_point    = average_speeds[idx - 1]\n",
+        "        if speed_at_the_previos_point == 0:\n",
+        "          break\n",
         "        # the time equals the time at the previous point + the time to reach the sampling_distance\n",
         "        # we can use the idx of the previous point as the time at the prious point; the time between adjacent points is 1s\n",
         "        time = (idx - 1) + ((sampling_distance - distance_at_the_previos_point) / speed_at_the_previos_point)\n",
         "        time_ms = int(time * 1000)\n",
+        "        if time_ms <= frames_times[-1]:\n",
+        "          break\n",
         "        frames_times.append(time_ms)\n",
         "        break\n",
         "    else:\n",
+        "        print(running_distance, sampling_points)\n",
         "        raise ValueError(\"Unreachable\")\n",
         "  \n",
-        "  return frames_times\n",
-        "\n",
-        "trajectory_running_distance = np.asarray(get_trajectory_running_distance(sample_trajectory))\n",
-        "trajectory_total_distance = int(get_trajectory_running_distance(sample_trajectory)[-1])\n",
-        "trajectory_sampling_points = np.asarray(range(0, trajectory_total_distance, SAMPLING_DISTANCE)[1:])\n",
-        "trajectory_average_speeds = np.asarray(get_average_speeds(sample_trajectory))"
+        "  return frames_times"
       ],
       "metadata": {
         "id": "lUH8Lw9qJXRL"
       },
-      "execution_count": 74,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "trajectory_running_distance = np.asarray(get_trajectory_running_distance(sample_trajectory))\n",
+        "trajectory_total_distance = int(get_trajectory_running_distance(sample_trajectory)[-1])\n",
+        "trajectory_sampling_points = np.asarray(range(0, trajectory_total_distance, SAMPLING_DISTANCE)[1:])\n",
+        "trajectory_average_speeds = np.asarray(get_average_speeds(sample_trajectory))\n",
         "get_frames_timestamps(trajectory_running_distance, trajectory_average_speeds, trajectory_sampling_points)"
       ],
       "metadata": {
@@ -291,15 +270,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J7M5MYvkanC8",
-        "outputId": "8adfffce-86b1-4415-e7ce-1ec58ddb4464"
+        "outputId": "6bb047d8-2479-445d-af49-d865481a2dcb"
       },
-      "execution_count": 75,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1146,\n",
+              "[0,\n",
+              " 1146,\n",
               " 2199,\n",
               " 3114,\n",
               " 3953,\n",
@@ -332,19 +312,77 @@
             ]
           },
           "metadata": {},
-          "execution_count": 75
+          "execution_count": 7
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Generate the sampling timestamps for all trajectories"
+      ],
+      "metadata": {
+        "id": "jAT-DQEJo_Io"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        ""
+        "from datetime import datetime\n",
+        "\n",
+        "def format_timestamps(timestamps, tr):\n",
+        "  try:\n",
+        "    return [datetime.fromtimestamp(t/1000).strftime(\"00:00:%S:%f\")[:-3] for t in timestamps]\n",
+        "  except ValueError:\n",
+        "    print(timestamps, tr)\n",
+        "    raise\n",
+        "\n",
+        "\n",
+        "\n",
+        "def trajectory_with_timestamps(trajectory):\n",
+        "  trajectory_running_distance = np.asarray(get_trajectory_running_distance(trajectory))\n",
+        "  trajectory_total_distance = int(get_trajectory_running_distance(trajectory)[-1])\n",
+        "  trajectory_sampling_points = np.asarray(range(0, trajectory_total_distance, SAMPLING_DISTANCE)[1:])\n",
+        "  trajectory_average_speeds = np.asarray(get_average_speeds(trajectory))\n",
+        "  timestamps = get_frames_timestamps(trajectory_running_distance, trajectory_average_speeds, trajectory_sampling_points)\n",
+        "  return trajectory[0], format_timestamps(timestamps, trajectory)"
+      ],
+      "metadata": {
+        "id": "1iuuPJebyNE2"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "selected_trajectories_with_timestamps = [trajectory_with_timestamps(trajectory) for trajectory in selected_trajectories]"
+      ],
+      "metadata": {
+        "id": "oPeeMBJ6ykv2"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Store the results"
+      ],
+      "metadata": {
+        "id": "LKksDPQn4KyE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('/content/drive/MyDrive/trajectories_with_timestamps.pkl', 'wb') as f:\n",
+        "  pickle.dump(selected_trajectories_with_timestamps, f)"
       ],
       "metadata": {
         "id": "J6_nYI3Gnn08"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     }
   ]
