Fix timestamps formatting

--- a/nth_frame.ipynb
+++ b/nth_frame.ipynb
@@ -6,7 +6,7 @@
       "name": "nth_frame.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNV0tHJ98lDBwlxdKjZYBsH",
+      "authorship_tag": "ABX9TyOfmRfu+fTa+Ny6Wdntde2g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,9 +41,35 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "zh53-WAtk1Vu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zh53-WAtk1Vu",
+        "outputId": "82a088c8-f824-4fe6-e7cf-c1dcc2a14f2b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pandas==1.3.5 in /usr/local/lib/python3.7/dist-packages (1.3.5)\n",
+            "Requirement already satisfied: requests==2.23.0 in /usr/local/lib/python3.7/dist-packages (2.23.0)\n",
+            "Requirement already satisfied: geopy==1.17.0 in /usr/local/lib/python3.7/dist-packages (1.17.0)\n",
+            "Requirement already satisfied: imageio==2.4.1 in /usr/local/lib/python3.7/dist-packages (2.4.1)\n",
+            "Requirement already satisfied: Pillow==7.1.2 in /usr/local/lib/python3.7/dist-packages (7.1.2)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2018.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (2.8.2)\n",
+            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.7/dist-packages (from pandas==1.3.5) (1.21.5)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0) (2.10)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests==2.23.0) (2021.10.8)\n",
+            "Requirement already satisfied: geographiclib<2,>=1.49 in /usr/local/lib/python3.7/dist-packages (from geopy==1.17.0) (1.52)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas==1.3.5) (1.15.0)\n",
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "# Reproducible-ish dependencies\n",
         "!pip install \\\n",
@@ -64,13 +90,13 @@
         "API_KEY = getpass('Enter the google maps API key: ')"
       ],
       "metadata": {
+        "id": "R5a0szxE4jR9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "R5a0szxE4jR9",
-        "outputId": "2f90d83d-cc79-4994-ec21-1cd007d83221"
+        "outputId": "049fdbef-35fe-47e5-ee94-eb74d7488385"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -105,7 +131,7 @@
       "metadata": {
         "id": "WJ94I-RplFVa"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +202,7 @@
       "metadata": {
         "id": "s1v6VrxZrKXE"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +221,7 @@
       "metadata": {
         "id": "6mtliwdL8eK9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +233,7 @@
         "* Assuming we managed to divide the trajectories into $50m$ sub-trajectories.\n",
         "* We have the speed at each point, and we can assume constant speed between adjacent points of the average speed at these point $v_{n → n+1} = {{v_{n} + v_{n+1} \\over 2}, \\ n \\in \\{1, \\ 2, \\ 3, \\ \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\}}$.\n",
         "* The time between adjacent points is $1s$.\n",
-        "* To get the time of corresponding frame for the $nth$ point we can use this formula $t_n={d \\times n \\over v_{n → n+1}} , \\ n \\in \\{1, \\  2, \\  3, \\  \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\}$.\n",
+        "* To get the time of corresponding frame for the $nth$ point we can use this formula $t_n={d \\times n \\over v_{n → n+1}} , \\ n \\in \\{1, \\  2, \\  3, \\  \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\land t_n \\gt t_{n-1}\\}$.\n",
         "* Then pass the list of $t_n$s to `ffmpeg` to extract the frames. \n",
         "\n",
         "> https://colab.research.google.com/drive/1RVCX9pociA3bU9IEeJNz0xaboCKWqYoq#scrollTo=zsx25ZJ-8PTK&line=9&uniqifier=1"
@@ -245,7 +271,6 @@
         "        frames_times.append(time_ms)\n",
         "        break\n",
         "    else:\n",
-        "        print(running_distance, sampling_points)\n",
         "        raise ValueError(\"Unreachable\")\n",
         "  \n",
         "  return frames_times"
@@ -253,7 +278,18 @@
       "metadata": {
         "id": "lUH8Lw9qJXRL"
       },
-      "execution_count": 6,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "z9XLDXuwN_jM"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -266,13 +302,13 @@
         "get_frames_timestamps(trajectory_running_distance, trajectory_average_speeds, trajectory_sampling_points)"
       ],
       "metadata": {
+        "id": "J7M5MYvkanC8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "J7M5MYvkanC8",
-        "outputId": "6bb047d8-2479-445d-af49-d865481a2dcb"
+        "outputId": "5153812f-4674-4b17-d50d-a2dbc1b7c0f6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -312,7 +348,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -330,13 +366,9 @@
       "source": [
         "from datetime import datetime\n",
         "\n",
-        "def format_timestamps(timestamps, tr):\n",
-        "  try:\n",
-        "    return [datetime.fromtimestamp(t/1000).strftime(\"00:00:%S:%f\")[:-3] for t in timestamps]\n",
-        "  except ValueError:\n",
-        "    print(timestamps, tr)\n",
-        "    raise\n",
-        "\n",
+        "def format_timestamps(timestamps):\n",
+        "  \"\"\"Format ms to ffmpeg timestamps\"\"\"\n",
+        "  return [datetime.fromtimestamp(t/1000).strftime(\"00:00:%S.%f\")[:-3] for t in timestamps]\n",
         "\n",
         "\n",
         "def trajectory_with_timestamps(trajectory):\n",
@@ -345,12 +377,12 @@
         "  trajectory_sampling_points = np.asarray(range(0, trajectory_total_distance, SAMPLING_DISTANCE)[1:])\n",
         "  trajectory_average_speeds = np.asarray(get_average_speeds(trajectory))\n",
         "  timestamps = get_frames_timestamps(trajectory_running_distance, trajectory_average_speeds, trajectory_sampling_points)\n",
-        "  return trajectory[0], format_timestamps(timestamps, trajectory)"
+        "  return trajectory[0], format_timestamps(timestamps)"
       ],
       "metadata": {
         "id": "1iuuPJebyNE2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +393,7 @@
       "metadata": {
         "id": "oPeeMBJ6ykv2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -377,12 +409,12 @@
       "cell_type": "code",
       "source": [
         "with open('/content/drive/MyDrive/trajectories_with_timestamps.pkl', 'wb') as f:\n",
-        "  pickle.dump(selected_trajectories_with_timestamps, f)"
+        "  pickle.dump(dict(selected_trajectories_with_timestamps), f)"
       ],
       "metadata": {
         "id": "J6_nYI3Gnn08"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     }
   ]
