Fix sampling formula

--- a/timestamps.ipynb
+++ b/timestamps.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "nth_frame.ipynb",
+      "name": "timestamps.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOfmRfu+fTa+Ny6Wdntde2g",
+      "authorship_tag": "ABX9TyNS2Xga9BKWtvGAvyrX7Ont",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AbdulrhmnGhanem/bdd100k-trajectories/blob/main/nth_frame.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AbdulrhmnGhanem/bdd100k-trajectories/blob/main/timestamps.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -233,7 +233,7 @@
         "* Assuming we managed to divide the trajectories into $50m$ sub-trajectories.\n",
         "* We have the speed at each point, and we can assume constant speed between adjacent points of the average speed at these point $v_{n → n+1} = {{v_{n} + v_{n+1} \\over 2}, \\ n \\in \\{1, \\ 2, \\ 3, \\ \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\}}$.\n",
         "* The time between adjacent points is $1s$.\n",
-        "* To get the time of corresponding frame for the $nth$ point we can use this formula $t_n={d \\times n \\over v_{n → n+1}} , \\ n \\in \\{1, \\  2, \\  3, \\  \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\land t_n \\gt t_{n-1}\\}$.\n",
+        "* To get the time of corresponding frame for the $nth$ point we can use this formula $t_n={d \\times n \\over v_{n → n+1}} , \\ n \\in \\{1, \\  2, \\  3, \\  \\ldots, \\lfloor{trajectory \\ distace \\over SAMPLING\\_DISTANCE} \\} \\land t_n \\gt t_{n-1}$.\n",
         "* Then pass the list of $t_n$s to `ffmpeg` to extract the frames. \n",
         "\n",
         "> https://colab.research.google.com/drive/1RVCX9pociA3bU9IEeJNz0xaboCKWqYoq#scrollTo=zsx25ZJ-8PTK&line=9&uniqifier=1"
