Add the aerial sampling algorithm

--- a/satellite_images.ipynb
+++ b/satellite_images.ipynb
@@ -6,7 +6,7 @@
       "name": "satellite_images.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOBQmeP0+8XPeYyUxi4wYZ4",
+      "authorship_tag": "ABX9TyPnWalWdgV1mCGytpPLUjSI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,6 +240,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Ground truth trajectory"
+      ],
+      "metadata": {
+        "id": "-Dt0bLffmgMJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "mark_trajectory(ground_truth_points, zoom=17, scale=1, size=\"800x800\")  # Ground truth trajectory."
@@ -266,6 +275,15 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The points at which we are taking aerial snapshots"
+      ],
+      "metadata": {
+        "id": "E63LwNDmmwSU"
+      }
     },
     {
       "cell_type": "code",
